rutas de todas paginas

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -36,26 +36,26 @@
             </form>
 
             <a href="#" class="enlace">            
-                <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
-                </figure>             
-            </a>
-            <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="pdd.html">Productos</a>
-                    <ul class="subMenu">
-                        <li>Electrodomésticos</li>
-                        <li>Computadoras</li>
-                        <li>Audio y sonido</li>
-                        <li>Televisores</li>
-                        <li>Relojes</li>
-                        <li>Fotografía</li>
-                    </ul>     
-                </li>                     
-                <li><a href="carrito.html">Carro de compras</a></li>    
-                <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                <li><a href="somos.html">Conocenos</a></li>                  
-            </ul> 
+                    <figure>
+                        <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                    </figure>             
+                </a>
+                <ul class="menu">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="pdd.html">Productos</a>
+                        <ul class="subMenu">
+                            <li>Electrodomésticos</li>
+                            <li>Computadoras</li>
+                            <li>Audio y sonido</li>
+                            <li>Televisores</li>
+                            <li>Relojes</li>
+                            <li>Fotografía</li>
+                        </ul>      
+                    </li>                     
+                    <li><a href="carrito.html">Carrito</a></li>    
+                    <li><a href="micuenta.html">Mi cuenta</a></li>                    
+                    <li><a href="somos.html">Conocenos</a></li>  
+                </ul> 
                 <!--Contenedor de Redes Sociales-->
             <div class="red">
             <!--el target _blanck hace que al hacer clic abra el link en otra pestaña sin salir del sitio-->
