--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <!--Link Css-->
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="stylesheet" href="/css/responsive.css">
-        <link rel="stylesheet" href="/css/social-media.css">
-        <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/social-media.css">
+    <link rel="stylesheet" href="/css/form.css">
         <!--Link Fuente-->
         <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
         <!--Link FavIcon-->
@@ -34,26 +34,26 @@
                 </div>
             </form>
             <a href="#" class="enlace">            
-                <figure>
-                    <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
-                </figure>             
-            </a>
-            <ul class="menu">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="pdd.html">Productos</a>
-                    <ul class="subMenu">
-                        <li>Electrodomésticos</li>
-                        <li>Computadoras</li>
-                        <li>Audio y sonido</li>
-                        <li>Televisores</li>
-                        <li>Relojes</li>
-                        <li>Fotografía</li>
-                    </ul>    
-                </li>                     
-                <li><a href="carrito.html">Carro de compras</a></li>    
-                <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                <li><a href="somos.html">Conocenos</a></li>  
-            </ul> 
+                    <figure>
+                        <img src="/img/logo cosmos - copia.png" alt="Logo" class="logo">
+                    </figure>             
+                </a>
+                <ul class="menu">
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="pdd.html">Productos</a>
+                        <ul class="subMenu">
+                            <li>Electrodomésticos</li>
+                            <li>Computadoras</li>
+                            <li>Audio y sonido</li>
+                            <li>Televisores</li>
+                            <li>Relojes</li>
+                            <li>Fotografía</li>
+                        </ul>      
+                    </li>                     
+                    <li><a href="carrito.html">Carrito</a></li>    
+                    <li><a href="micuenta.html">Mi cuenta</a></li>                    
+                    <li><a href="somos.html">Conocenos</a></li>  
+                </ul> 
                 <!--Contenedor de Redes Sociales-->
             <div class="red">
             <!--el target _blanck hace que al hacer clic abra el link en otra pestaña sin salir del sitio-->
