--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -51,9 +51,9 @@
                         <li>Fotografía</li>
                     </ul>      
                 </li>                     
-                <li><a href="carrito.html">Carro de compras</a></li>    
+                <li><a href="carrito.html">Carrito</a></li>    
                 <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                <li><a href="somos.html">Conocenos</a></li>                
+                <li><a href="somos.html">Conocenos</a></li>  
             </ul> 
                 <!--Contenedor de Redes Sociales-->
             <div class="red">
