--- a/index.html
+++ b/index.html
@@ -74,9 +74,7 @@
     <main>
         <section class="banner">   
             <figure>
-                <img src="https://imagizer.imageshack.com/img922/662/GbaUPV.jpg" alt="Banner Home">
-                
-                <!-- <img src="/img/BANNER XIAOMI.jpg" alt="Banner Home"> -->
+                <img src="https://imagizer.imageshack.com/img922/662/GbaUPV.jpg" alt="Banner Home" loading="lazy">               
             </figure> 
             <div class="botonBanner">
                 <button class="compraAqui">Compra aquí</button>
