--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li>Fotografía</li>
                     </ul>
                 </li>
-                <li><a href="pages/carrito.html">Carro de compras</a></li>
+                <li><a href="pages/carrito.html">Carrito</a></li>
                 <li><a href="pages/micuenta.html">Mi cuenta</a></li>
                 <li><a href="pages/somos.html">Conocenos</a></li>
                 
