actualice la pagina somos con la nueva información

--- a/pages/somos.html
+++ b/pages/somos.html
@@ -67,7 +67,8 @@
     <main>
         <section>
             <div class="contenedorTituloConocenos">
-                <img src="../img/banner 4 esquinas.webp" alt="Equipo 4Esquinas">                 
+                <!-- <img src="../img/banner 4 esquinas.webp" alt="Equipo 4Esquinas">    -->
+                <img src="https://imagizer.imageshack.com/img922/8540/Qv5p69.jpg" border='0' alt="Equipo 4Esquinas" loading="lazy">                    
             </div>  
         </section>          
         <section>  
@@ -120,14 +121,14 @@
                         Nuestra experta en análisis de datos y marketing uruguaya, es la encargada de la organización y estructura del sitio web. Tiene una visión clara del proyecto y sabe cómo llevarlo a cabo de manera efectiva.
                         </p>
                     </div>                    
-                    <div class="contenedorEquipo">
+                    <!-- <div class="contenedorEquipo">
                         <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/02wxqn5w/Any-Conv-com-Mesa-de-trabajo-18-copia-2tablas-ingles.webp' border='0' alt='Any-Conv-com-Mesa-de-trabajo-18-copia-2tablas-ingles'class="avatar" loading="lazy"/></a>
                         <button class="botonDev">Jenny Rojas</button>                        
                         <p class="parrafoDevs">                          
                             Nuestra analista de datos colombiana, se caracteriza por ser
                             nuestra "geek" de las animaciones y efectos visuales. Su pasión por las animaciones y efectos cool, y siempre está buscando nuevas formas de mejorar la experiencia del usuario a través de la tecnología.
                         </p>
-                    </div>
+                    </div> -->
                 </div>
                     <section>
                 <h2>¡Gracias por visitarnos!</h2>               
