banner en url externa producto

--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -100,7 +100,7 @@
     <section>
     <div class="categoriaBanner">    
         <figure>
-            <img src="../img/banner vacum webp.webp" alt="Banner promocional">
+            <img src="https://imagizer.imageshack.com/img924/6560/RDU26k.jpg" alt="Banner promocional" loading="lazy">
         </figure>    
             <button class="botonBanner2">Compra ahora</button>      
     </div>
