--- a/pages/somos.html
+++ b/pages/somos.html
@@ -68,7 +68,7 @@
         <section>
             <div class="contenedorTituloConocenos">
                 <!-- <img src="../img/banner 4 esquinas.webp" alt="Equipo 4Esquinas">    -->
-                <img src="https://imagizer.imageshack.com/img922/8540/Qv5p69.jpg" border='0' alt="Equipo 4Esquinas" loading="lazy">                    
+                <img src="https://imagizer.imageshack.com/img922/8540/Qv5p69.jpg" alt="Equipo 4Esquinas" loading="lazy">                    
             </div>  
         </section>          
         <section>  
