--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/social-media.css">
     <link rel="stylesheet" href="../css/form.css">
+    <link rel="stylesheet" href="../css/carrito.css">
     <!--Link Fuente-->
     <script src="https://use.fontawesome.com/502b7294a9.js"></script>     
     <!--Link FavIcon-->
