margenes cards y descripciones en español

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -84,43 +84,43 @@
             <!-- Contenedor de elementos -->
             <div class="contenedor-items">
                 <div class="item">
-                    <span class="titulo-item">Box Engasse</span>
+                    <span class="titulo-item">Cocina HACEB ROMERO 601 GN PL</span>
                     <img src="https://imagizer.imageshack.com/img923/3487/owKb0c.jpg" alt="" class="img-item">
                     <span class="precio-item">$15.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">English Horse</span>
+                    <span class="titulo-item">Heladera SAMSUNG No frost 363 Lts</span>
                     <img src="https://imagizer.imageshack.com/img922/7452/JKBxHt.png" alt="" class="img-item">
                     <span class="precio-item">$25.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">Knock Nap</span>
+                    <span class="titulo-item">Minibar HACEB 95 9002547</span>
                     <img src="https://imagizer.imageshack.com/img924/7990/UOQ2gC.png" alt="" class="img-item">
                     <span class="precio-item">$35.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">La Night</span>
+                    <span class="titulo-item">Lavadora Carga Superior SAMSUNG</span>
                     <img src="https://imagizer.imageshack.com/img924/7673/EG0wU4.png" alt="" class="img-item">
                     <span class="precio-item">$18.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">Silver All</span>
+                    <span class="titulo-item">Cocina HACEB ROMERO 50-T GN PL</span>
                     <img src="https://imagizer.imageshack.com/img924/55/4E0vXU.png" alt="" class="img-item">
                     <span class="precio-item">$32.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">Skin Glam</span>
+                    <span class="titulo-item">Horno Microondas LG MS0936Gir</span>
                     <img src="https://imagizer.imageshack.com/img923/9641/WKWPvg.png" alt="" class="img-item">
                     <span class="precio-item">$18.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
                 <div class="item">
-                    <span class="titulo-item">Midimix</span>
+                    <span class="titulo-item">Freidora de aire OSTER 4lt 21382951</span>
                     <img src="https://imagizer.imageshack.com/img922/3224/17iVKg.png" alt="" class="img-item">
                     <span class="precio-item">$54.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
