links iconos carrito y mi cuenta en el nav

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="bi bi-truck"></i>
+                <a href="pages/carrito.html">
                 <i class="bi bi-cart"></i>
-                <i class="bi bi-person"></i>
+                </a>   
+                <a href="pages/micuenta.html">        
+                <i class="bi bi-person">       
+                </i> 
+                </a> 
                 <i class="bi bi-list"></i>
             </label>
             <form autocomplete="off">
