--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -24,8 +24,12 @@
             <input type="checkbox" id="check">
             <label for="check"class="checkbtn">
                 <i class="bi bi-truck"></i>
+                <a href="carrito.html">
                 <i class="bi bi-cart"></i>
+            </a>
+            <a href="micuenta.html">
                 <i class="bi bi-person"></i>
+            </a>
                 <i class="bi bi-list"></i>
             </label>
             <form autocomplete="off">
@@ -34,27 +38,27 @@
                     <a href='https://postimages.org/' target='_blank'><img src='https://i.postimg.cc/FFB2yhY4/LUPA.png' border='0' alt='LUPA'class="lupa" loading="lazy"/></a>
                 </div>
             </form>
-            <a href="#" class="enlace">            
+            <a href="#" class="enlace">           
                 <figure>
                     <img src="../img/logo cosmos - copia.png" alt="Logo" class="logo">
-                </figure>            
-                </a>
-                <ul class="menu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="pdd.html">Productos</a>
-                        <ul class="subMenu">
-                            <li>Electrodomésticos</li>
-                            <li>Computadoras</li>
-                            <li>Audio y sonido</li>
-                            <li>Televisores</li>
-                            <li>Relojes</li>
-                            <li>Fotografía</li>
-                        </ul>      
-                    </li>                     
-                    <li><a href="carrito.html">Carrito</a></li>    
-                    <li><a href="micuenta.html">Mi cuenta</a></li>                    
-                    <li><a href="somos.html">Conocenos</a></li>  
-                </ul> 
+                </figure>             
+            </a>
+            <ul class="menu">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="pdd.html">Productos</a>
+                    <ul class="subMenu">
+                        <li>Electrodomésticos</li>
+                        <li>Computadoras</li>
+                        <li>Audio y sonido</li>
+                        <li>Televisores</li>
+                        <li>Relojes</li>
+                        <li>Fotografía</li>
+                    </ul>      
+                </li>                     
+                <li><a href="carrito.html">Carrito</a></li>    
+                <li><a href="micuenta.html">Mi cuenta</a></li>                    
+                <li><a href="somos.html">Conocenos</a></li>  
+            </ul> 
                 <!--Contenedor de Redes Sociales-->
             <div class="red">
             <!--el target _blanck hace que al hacer clic abra el link en otra pestaña sin salir del sitio-->
