--- a/pages/somos.html
+++ b/pages/somos.html
@@ -25,8 +25,12 @@
             <input type="checkbox" id="check">
             <label for="check"class="checkbtn">
                 <i class="bi bi-truck"></i>
+                <a href="carrito.html">
                 <i class="bi bi-cart"></i>
+            </a>
+            <a href="micuenta.html">
                 <i class="bi bi-person"></i>
+            </a>
                 <i class="bi bi-list"></i>
             </label>
             <form autocomplete="off">
