h2 agregados a Productos, Carrito y Formulario

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -83,12 +83,14 @@
     </div>
     
     <main>
-        <section class="contenedorCarrito">
+        <h1>Compre por producto</h1>
+        <h2>Ofertas del día</h2>
+        <section class="contenedorCarrito">            
             <!-- Contenedor de elementos -->
             <div class="contenedor-items">
                 <div class="item">
-                    <span class="titulo-item">Cocina HACEB ROMERO 601 GN PL</span>
-                    <img src="https://imagizer.imageshack.com/img923/3487/owKb0c.jpg" alt="" class="img-item">
+                    <span class="titulo-item">Aire Acondicionado LG</span>
+                    <img src="https://imagizer.imageshack.com/img924/1756/vNv6W4.png" alt="" class="img-item">
                     <span class="precio-item">$15.000</span>
                     <button class="boton-item">Agregar al Carrito</button>
                 </div>
