--- a/pages/micuenta.html
+++ b/pages/micuenta.html
@@ -69,12 +69,14 @@
         </nav>
     </header>  
 <main>   
+    <h1>Mis datos</h1>
+    <h2>Accede a tu cuenta</h2>
     <section class="contenedorRegistro">
         <h3>Formulario de Registro</h3>
-        <input type="text" name="nombre" id="nombre" placeholder="Ingresa tu nombre" required class="input">
-        <input type="text" name="apellido" id="apellido" placeholder="Ingresa tu apellido" required class="input">
-        <input type="email" name="correo" id="correo" placeholder="Ingresa tu correo" required class="input">
-        <input type="password" name="contraseña" id="contraseña" placeholder="Ingresa tu contraseña" required class="input">
+        <input type="text" name="nombre" id="nombre" placeholder="Nombre" required class="input">
+        <input type="text" name="apellido" id="apellido" placeholder="Apellido" required class="input">
+        <input type="email" name="correo" id="correo" placeholder="Correo Electrónico" required class="input">
+        <input type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required class="input">
         <input type="password" name="contraseña" id="contraseña" placeholder="Confirma tu contraseña" required class="input">
         <p>Estoy de acuerdo con los <a href="#">Términos y Condiciones</a></p>
         <input type="submit" value="Registrarme" class="botonFormulario">
