--- a/pages/pdd.html
+++ b/pages/pdd.html
@@ -81,6 +81,7 @@
 <main>
     <section>
         <h1>Categorías</h1>
+        <h2>Navegue por las categorías</h2>
         <div class="galeria-container">            
                 <div class="categoria1">
                     <button class="botonCategoria1">Electrodomésticos</button>                    
