--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         </div>
         <div id="whatsapp"><a href="https://web.whatsapp.com/" target="_blank" class="fa fa-whatsapp"></a>     
     </footer>
-    <!--Link Javascript Bundel with Popper-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    Link Javascript Bundel with Popper
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
 <body>
 </html>
